fix issue with css not showing active class

--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -27,5 +27,5 @@
 }
 
 .Logo {
-	height: 80%;
+	height: 7%;
 }
